--- a/atividade1.html
+++ b/atividade1.html
@@ -16,9 +16,9 @@
     
 
     <p>Lorem ipsum dolor sit, 
-        amet consectetur adipisicing elit. 
-        Facilis suscipit, quibusdam laudantium molestiae in,
-        aliquid nesciunt repudiandae amet ipsa obcaecati 
+        amet consectetur adipisicing elit. <br>
+        Facilis suscipit, quibusdam laudantium molestiae in,<br>
+        aliquid nesciunt repudiandae amet ipsa obcaecati <br>
         deserunt quam esse excepturi illo animi maxime vel et. 
         Rem.
     </p>
