--- a/lista.html
+++ b/lista.html
@@ -3,9 +3,31 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Lista De Exercícios </title>
+    <title>Exercício 1 </title>
+    <style>
+        .title{
+            text-align: center;
+        }
+        img{
+            padding: 15px;
+            width: 70%;
+        }
+        p{
+            color:blue;
+        }
+    </style>
 </head>
-<body>
-    
-</body>
+    <body>
+        <div class="title">
+            <h1>Japão</h1>
+                <img src="images/japão.jpeg" alt="Castelo no estilo feudal no Japão">
+                    <p>
+                        O <strong>Japão</strong> é o 11º maior país do mundo em população.<br> 
+                        De acordo com os dados das Nações Unidas para 2020,<br>
+                        o território japonês possui um contingente populacional de 126.476.000 de pessoas.<br> 
+                        Além de populoso, pode-se dizer que o Japão é um país densamente povoado,<br>
+                        com distribuição de 346,9 habitantes a cada km².
+                    </p>
+    </div>
+    </body>
 </html>
