--- a/lista3.html
+++ b/lista3.html
@@ -78,7 +78,7 @@
                             <img src="images/linux1.png" alt="terminal linux">
                         </div>
                         
-
+                                <span>teste git.credentials</span>
                         <ul>
                             <li><strong>(HyperText Markup Language)</strong>: utilizada para documentação e páginas web a partir de marcação de hipertexto;<br></li>
                             <li><strong>(Cascading Style Sheets)</strong> é uma linguagem de formatação de conteúdo, responsável pelo visual de um site; muito utilizada com HTML;<br></li>
