--- a/lista6.html
+++ b/lista6.html
@@ -4,11 +4,35 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercicio6</title>
+    <style>
+        .container{
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body > img{
+            display: flex;
+            align-items: center;
+            justify-content: center;
+        }
+        header{
+            text-align: center;
+            font-size: 56px;
+            margin: 20px;
+            color: blueviolet;
+        }
+        img{
+            margin: 50px;
+            width:90vw;
+            height: 60vh;
+            text-align: right;
+        }
+    </style>
 </head>
     <body>
         <div class="container">
             <header>LA RECEITARIA</header>
-
+                <img src="images/bowl-italian-ravioli-pasta-with-spicy-tomato-sauce-cheese_23-2147926108.avif" alt="">
             <!-- division for "ingredientes"-->
                 <div class="ingredientes">
                         <h1>Camarão com Provolone</h1>
