new file html-div

--- a/atividade 7.html
+++ b/atividade 7.html
@@ -87,6 +87,8 @@ footer{
     border: 1px solid #000;
     margin: 25px;
     background: #9370DB;
+    color: #FFFF;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 }
 
 </style>
@@ -123,7 +125,7 @@ footer{
                                     <img src="beneficios.png" class="imagem_beneficios">
                         </div>
             <footer>
-                contatos pelo fone :(99)9999-999-99
+                CONTATOS PELO FONE:(99) 9999-999-99
             </footer>
     </body>
 </html>
