--- a/tabelas-final/index1.html
+++ b/tabelas-final/index1.html
@@ -130,14 +130,50 @@
 
             
             <tr>
-                <td>Paulo</td>
-                <td>4,5</td>
-                <td>6</td>
+                <td
+                style="text-align: center;
+                color: #000;
+                background: #ffff;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-weight: 900;"
+                >Paulo</td>
+                <td
+                style="text-align: center;
+                color: red;
+                background: #ffff;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-weight: 900;"
+                >4,5</td>
+                <td
+                style="text-align: center;
+                color:green;
+                background: #ffff;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-weight: 900;"
+                >6</td>
             </tr>
             <tr>
-                <td>Tadeu</td>
-                <td>3</td>
-                <td>2</td>
+                <td
+                style="text-align: center;
+                color:#000;
+                background: lightgray;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-weight: 900;"
+                >Tadeu</td>
+                <td
+                style="text-align: center;
+                color: red;
+                background: lightgray;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-weight: 900;"
+                >3</td>
+                <td
+                style="text-align: center;
+                color: red;
+                background: lightgray;
+                font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+                font-weight: 900;"
+                >2</td>
             </tr>
         </table>
     </body>
